# buddy

./: .gitignore  eslint.config.js  justfile  package.json  pnpm-lock.yaml  tsconfig.json
.devcontainer/: .zshrc  devcontainer.json  docker-compose.code.yml  justfile
.github/workflows/: ci.yml  macos-ci.yml  server-ci.yml
.husky/: pre-commit
app/: .gitignore  justfile
app/Buddy/: BuddyApp.swift  ContentView.swift  Localizable.xcstrings  Preview.swift
app/Buddy.xcodeproj/: project.pbxproj
app/Buddy/Assets.xcassets/AccentColor.colorset/: Contents.json
app/Buddy/Navigation/: AppNavigation.swift  AppTabView.swift  MainDetailView.swift  Screens.swift  Sidebar.swift
app/Modules/BuddyClient/: Package.swift
app/Modules/BuddyClient/Sources/BuddyClient/: BuddyAuthenticationClient.swift  BuddyClient.swift  BuddyHealthClient.swift  BuddyLLMClient.swift  openapi.json  (+1 more)
app/Modules/DesignSystem/: Package.swift
app/Modules/Features/: Package.swift
app/Modules/swift-validator/: Package.swift
docker/: docker-compose.services.yml
postman/collections/: Buddy.postman_collection.json
postman/environments/: Buddy.postman_environment.json
server/: .dockerignore  .env.example  .env.testing  .gitignore  Dockerfile  justfile  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini
server/src/: index.ts
server/src/buddy/: conf.py  conftest.py  database.py  exceptions.py  main.py  schemas.py
server/src/buddy/app_api/: router.py
server/src/buddy/auth/: controller.py  exceptions.py  middleware.py  models.py  router.py  schemas.py
server/src/buddy/auth/tests/: test_login.py  test_register.py  test_session.py  test_user_token.py
server/src/buddy/auth/utils/: jwt_utils.py  user.py
server/src/buddy/health/: router.py
server/src/buddy/llm/: controller.py  exceptions.py  models.py  router.py  schemas.py
server/src/buddy/llm/providers/: __init__.py  google.py  openai.py  provider.py
server/src/buddy/money/: tiers.py
server/src/buddy/utils/: database_utils.py  datetime_utils.py  logger_utils.py
server/src/common/: exceptions.ts
server/src/common/constants/: http.ts
server/src/common/http/: responses.ts
server/src/common/schemas/: responses.ts
server/src/common/utils/: env.ts  open-api.ts  responses.ts  strings.ts
server/src/health/: router.ts  schemas.ts
server/src/health/routes/: ping.ts
src/: index.ts
src/common/: exceptions.ts
src/common/middleware/: logger.ts
src/common/utils/: contexts.ts  open-api.ts  typing.ts
(+54 files in other folders)
