[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.9.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/buddy"]
