[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "google-genai>=1.5.0",
    "openai>=1.64.0",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.10.6",
    "pydantic-extra-types>=2.10.2",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "pytz>=2025.1",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.22",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.6",
    "testcontainers[postgres]>=4.9.2",
    "types-pytz>=2025.1.0.20250204",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/buddy"]
